// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emydura-short.phy 1`] = `
"species = tQwNDLi oTYwLH vwAqcZ CXTpAGBdz
seqperspecies = 3 2 2 1

locusrate = 1.0
heredityscalar = 0.25
seqgencommand = -mHKY -f0.2678,0.1604,0.2031,0.3687 -t1.5161 -i0 -a0.2195 -l810
significancelevel = 0.9999
burnin = 0
thinning = 1
seed = -1
"
`;

exports[`smallerlepus.phy 1`] = `
"species = igcfean abbdbkga cbcidpnh bkaabphc
seqperspecies = 15 2 8 4

locusrate = 1.0
heredityscalar = 0.25
seqgencommand = -mHKY -f0.2678,0.1604,0.2031,0.3687 -t1.5161 -i0 -a0.2195 -l810
significancelevel = 0.9999
burnin = 0
thinning = 1
seed = -1
"
`;
